[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-once-cell = "0.5.3"
cookie = "0.17.0"
hyper = { version = "1.0.0-rc.4", features = ["server", "client", "http1", "http2"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
tokio-util = { version = "0.7.8", features = ["io"] }
async-recursion = "1.0.4"
async-session = "3.0.0"
async-trait = "0.1.72"
config = "0.13.1"
itertools = "0.11"
form_urlencoded = "1.2.0"
futures = "0.3"
mime_guess = "2.0.4"
serde = "1.0.8"
serde_derive = "1.0.8"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
http-body-util = "0.1.0-rc.3"
webpki-roots = "0.25"
