[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-once-cell = "0.5.3"
async-trait = "0.1.80"
config = "0.14"
cookie = "0.18"
hyper = { version = "1.2", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
itertools = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
tokio-util = { version = "0.7.8", features = ["io"] }
async-recursion = "1.0.4"
async-session = "3.0.0"
form_urlencoded = "1.2.0"
futures = "0.3"
mime_guess = "2.0.4"
openidconnect = { version = "4.0.0-alpha.2", default-features = false }
rustls-pemfile = "2.1"
rustls-platform-verifier = "0.3"
serde = "1.0.8"
serde_derive = "1.0.8"
tokio-rustls = "0.26"
http-body-util = "0.1"
