[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-once-cell = "0.5"
async-trait = "0.1"
config = "0.15"
cookie = "0.18"
chrono = "0.4"
hyper = { version = "1.5", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
itertools = "0.13"
ktls = "6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
async-recursion = "1.0.4"
async-session = "3.0.0"
form_urlencoded = "1.2.0"
futures = "0.3"
mime_guess = "2.0"
openidconnect = { version = "4.0.0-rc.1", default-features = false }
rustls-pemfile = "2.2"
rustls-platform-verifier = "0.5"
serde = "1.0"
serde_derive = "1.0"
tokio-rustls = "0.26"
http-body-util = "0.1"
